# FoundAI

./: .gitignore  README.md  finder.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tagger.py
FoundAI/: __init__.py  config.py  finder.py  model.py
FoundAI/js/: main.jsx
FoundAI/static/css/: style_main.css
FoundAI/templates/: index.html
FoundAI/views/: __init__.py  index.py
Frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
Frontend/src/: AddPost.tsx  App.tsx  Found.tsx  Landing.tsx  Lost.tsx  Navbar.tsx  Temp.tsx  addpost.css  navbar.css  orders.css  post.css  styles.css
