[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FoundAI"
version = "1.0.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "requests",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["FoundAI"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
